{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 91,
  "lineage": "448f827f-1b58-d5ab-4123-909d2cdfcd58",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "hack-pub-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "hack-dns-1",
            "fqdn": "hack-dns-1.southcentralus.cloudapp.azure.com",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/hack-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "hack-pub-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "hack-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/frontendIPConfigurations/LoadBalancerFrontEnd",
                "name": "LoadBalancerFrontEnd",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/hack-pub-ip"
              }
            ],
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "location": "southcentralus",
            "name": "hack-load-balancer",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.hack-pub-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "BackendPool1"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_public_ip.hack-pub-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_rule",
      "name": "hack-natrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 50001,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-0",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "RDP-VM-0",
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_public_ip.hack-pub-ip"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 50002,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-1",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "RDP-VM-1",
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_public_ip.hack-pub-ip"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_port": 3389,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 50003,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-2",
            "idle_timeout_in_minutes": 4,
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "RDP-VM-2",
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_public_ip.hack-pub-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/probes/tcpProbe",
            "interval_in_seconds": 5,
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "tcpProbe",
            "number_of_probes": 3,
            "port": 80,
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_public_ip.hack-pub-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/frontendIPConfigurations/LoadBalancerFrontEnd",
            "frontend_ip_configuration_name": "LoadBalancerFrontEnd",
            "frontend_port": 80,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/loadBalancingRules/LBRule",
            "idle_timeout_in_minutes": 5,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer",
            "name": "LBRule",
            "probe_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/probes/tcpProbe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_lb_probe.lb_probe",
            "azurerm_public_ip.hack-pub-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hack-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-0",
            "internal_domain_name_suffix": "kwpzvyqjs3fudefyczgnmj1f1f.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-0",
                "primary": true,
                "private_ip_address": "10.0.10.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "internal-0",
            "private_ip_address": "10.0.10.5",
            "private_ip_addresses": [
              "10.0.10.5"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-1",
            "internal_domain_name_suffix": "kwpzvyqjs3fudefyczgnmj1f1f.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-1",
                "primary": true,
                "private_ip_address": "10.0.10.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "internal-1",
            "private_ip_address": "10.0.10.4",
            "private_ip_addresses": [
              "10.0.10.4"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-2",
            "internal_domain_name_suffix": "kwpzvyqjs3fudefyczgnmj1f1f.jx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal-2",
                "primary": true,
                "private_ip_address": "10.0.10.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet"
              }
            ],
            "location": "southcentralus",
            "name": "internal-2",
            "private_ip_address": "10.0.10.6",
            "private_ip_addresses": [
              "10.0.10.6"
            ],
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "hack-addpool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-0/ipConfigurations/internal-0|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "ip_configuration_name": "internal-0",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-0"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-1/ipConfigurations/internal-1|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "ip_configuration_name": "internal-1",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-1"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-2/ipConfigurations/internal-2|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/backendAddressPools/BackendPool1",
            "ip_configuration_name": "internal-2",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-2"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_backend_address_pool.backend_pool",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_nat_rule_association",
      "name": "hack-ni-natrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-0/ipConfigurations/internal-0|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-0",
            "ip_configuration_name": "internal-0",
            "nat_rule_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-0",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-0"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_nat_rule.hack-natrule",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-1/ipConfigurations/internal-1|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-1",
            "ip_configuration_name": "internal-1",
            "nat_rule_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-1",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-1"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_nat_rule.hack-natrule",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-2/ipConfigurations/internal-2|/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-2",
            "ip_configuration_name": "internal-2",
            "nat_rule_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/loadBalancers/hack-load-balancer/inboundNatRules/RDP-VM-2",
            "network_interface_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkInterfaces/internal-2"
          },
          "dependencies": [
            "azurerm_lb.hack-lb",
            "azurerm_lb_nat_rule.hack-natrule",
            "azurerm_network_interface.hack-nic",
            "azurerm_public_ip.hack-pub-ip",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hack-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/hack-nsg",
            "location": "southcentralus",
            "name": "hack-nsg",
            "resource_group_name": "Azuredevops",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "hack-nsr-dev-rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "http",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/hack-nsg/securityRules/http",
            "name": "http",
            "network_security_group_name": "hack-nsg",
            "priority": 201,
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.hack-nsg"
          ]
        },
        {
          "index_key": "rdp",
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "VirtualNetwork",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/hack-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "hack-nsg",
            "priority": 101,
            "protocol": "*",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "Internet",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.hack-nsg"
          ]
        },
        {
          "index_key": "sql",
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "1433",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/hack-nsg/securityRules/sql",
            "name": "sql",
            "network_security_group_name": "hack-nsg",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Azuredevops",
            "source_address_prefix": "SqlManagement",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.hack-nsg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hack-pub-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "hack-dns-1",
            "fqdn": "hack-dns-1.southcentralus.cloudapp.azure.com",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/publicIPAddresses/hack-pub-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southcentralus",
            "name": "hack-pub-ip",
            "resource_group_name": "Azuredevops",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hack-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet",
            "name": "hack-subnet",
            "resource_group_name": "Azuredevops",
            "virtual_network_name": "hack-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.hack-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "hack-nsga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet",
            "network_security_group_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/networkSecurityGroups/hack-nsg",
            "subnet_id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet/subnets/hack-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.hack-nsg",
            "azurerm_subnet.hack-subnet",
            "azurerm_virtual_network.hack-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hack-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "e29a9f55-9709-414b-90b8-164cd62765dd",
            "id": "/subscriptions/0173e877-ea67-406c-b540-ed9828abafea/resourceGroups/Azuredevops/providers/Microsoft.Network/virtualNetworks/hack-vnet",
            "location": "southcentralus",
            "name": "hack-vnet",
            "resource_group_name": "Azuredevops",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}